--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <link rel="stylesheet" href="./fonts/fonts.css">
@@ -61,7 +62,7 @@
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/kurskaya_kosa.png" alt="Куршская коса"/>
-          <div class="place_description">
+          <div class="place__description">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и
                подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
@@ -76,7 +77,7 @@
             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <img class="place__image" src="./images/Kolskiy.png" alt="Кольский"/>
-          <div class="place_description">
+          <div class="place__description">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, 
@@ -92,7 +93,7 @@
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img class="place__image" src="./images/__Altay.png" alt="Facebook"/>
-          <div class="place_description">
+          <div class="place__description">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете
               в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -108,7 +109,7 @@
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/Baikal.png" alt="Байкал"/>
-          <div class="place_description">
+          <div class="place__description">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
@@ -122,7 +123,7 @@
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/Karelia.png" alt="Карелия"/>
-          <div class="place_description">
+          <div class="place__description">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
@@ -132,7 +133,7 @@
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <div class="cover__overlay"></div>
-          <img class="cover__background" src="./images/__sobaki.png" alt="Собаки" href="https://stampsy.com/na-elektrichkakh-do-baikala"/>
+          <img class="cover__background" src="./images/__sobaki.png" alt="Собаки"/>
           <div class="cover__content">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -153,4 +154,4 @@
       </footer>
     </main>
   </body>
-</head>
+</html>
