--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами
           плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
           Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
-          Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+          Мы выбрали и описали некоторые интересные места, достойные вашего отпуска</p>
         <ul class="intro__list">
           <li>Часовых поясов 11</li>
           <li>Объектов природного наследия ЮНЕСКО 12</li>
@@ -62,7 +62,7 @@
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/kurskaya_kosa.png" alt="Куршская коса"/>
-          <div class="place__description">
+          <div>
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и
                подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
@@ -77,7 +77,7 @@
             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <img class="place__image" src="./images/Kolskiy.png" alt="Кольский"/>
-          <div class="place__description">
+          <div>
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
               тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, 
@@ -93,7 +93,7 @@
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img class="place__image" src="./images/__Altay.png" alt="Facebook"/>
-          <div class="place__description">
+          <div>
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете
               в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -109,7 +109,7 @@
             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/Baikal.png" alt="Байкал"/>
-          <div class="place__description">
+          <div>
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
@@ -123,7 +123,7 @@
             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/Karelia.png" alt="Карелия"/>
-          <div class="place__description">
+          <div>
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
