--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
-          <img class="place__image" src="./images/__Altay.png" alt="Facebook"/>
+          <img class="place__image" src="./images/__Altay.png" alt="Алтай"/>
           <div>
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете
