--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <header class="header">
     <img class="header__logo" src="./images/__logo.svg" alt="Россия" />
-    <div class="header__lang_block">
+    <div class="header__lang">
       <a class="header__lang-link header__lang-link_active" href="#">
         Ru
       </a>
