--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </section>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
       </a>
@@ -169,7 +169,7 @@
         <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
         <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
         <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-        <li><a class="footer__link footer__link_last" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">© 2022. Шипелин Егор</p>
